Style improvements and avoid truncating in parens

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .calculator {
   padding: 0.5em;
   margin: 0.5em;
-  border-radius: 0.3em;
+  border-radius: 0.6em;
   background-color: lightgray;
   font-weight: bold;
   font-size: x-large;
@@ -10,7 +10,7 @@
 .display {
   margin: 0.5em;
   padding: 0.5em;
-  border-radius: 0.2em;
+  border-radius: 0.4em;
   background-color: rgba(5, 0, 46, 0.2);
 }
 
@@ -18,6 +18,7 @@ button {
   margin: 0.75em 3em 0.75em 3em;
   width: 5em;
   height: 4em;
+  border-radius: 0.3em;
   font-weight: bolder;
   font-size: large;
 }
